Implement comprehensive logging strategy